near final draft https://github.com/phetsims/special-ops/issues/275

--- a/docs/community/gsoc2025.md
+++ b/docs/community/gsoc2025.md
@@ -1,8 +1,5 @@
 # Google Summer of Code 2025 Project Ideas List
 
-!!! warning
-      PLACEHOLDER CONTENT DO NOT PUBLISH
-
 This is a list of projects suggested by SceneryStack and PhET Interactive Simulations developers for [GSoC 2025](https://summerofcode.withgoogle.com/)
 
 - [Project 1: Develop an Accessible Game using SceneryStack](#project-1-develop-an-accessible-game-using-scenerystack)
@@ -22,12 +19,24 @@ The timeline for GSoC 2025 is at <https://developers.google.com/open-source/gsoc
 
 We look for:
 
-- Discussion and engagement with the community on the project you are interested in
+- Discussion and engagement with the community on the project you are interested in (see the threads linked below each project or [start your own](https://github.com/orgs/scenerystack/discussions))
 - Clear and detailed application explaining how you think the project could be done
 - Relevant prior experience
 - Understanding of Git and/or GitHub
 
-Read the [GSoC Student Guide](https://google.github.io/gsocguides/student/). It has a lot of useful information on how to write a good proposal.
+## How to apply
+
+1. Read the [GSoC Student Guide](https://google.github.io/gsocguides/student/). It has a lot of useful information on how to write a good proposal.
+2. Participate in the [Discussions forum](https://github.com/orgs/scenerystack/discussions) for the project you are interested in or start your own for a new project and engage with the mentors and community in planning your project.
+3. Please e-mail a brief CV to scenerystackjs at gmail dot com along with answers to these questions:
+      - What aspects of our project capture your interest the most?
+      - Could you describe your background with the specific technologies we use?
+      - Have you contributed to any other open-source initiatives, and if so, which ones?
+      - As mentors and project coordinators, how can we best support you to excel?
+      - Are there any other studies or projects you’ll be pursuing alongside this work?
+      - What methods or tools do you use to stay organized and on track?
+4. If your project idea is approved, you will be asked to complete a qualification task to demonstrate your skills and understanding of the project, which will be sent to you by email and reviewed by the mentors.
+5. If the project seems like a match, you'll received an affirmative response from the mentor(s) regarding your project. You can then submit your application to the [GSoC website](https://summerofcode.withgoogle.com/).
 
 ---
 
@@ -37,14 +46,14 @@ Read the [GSoC Student Guide](https://google.github.io/gsocguides/student/). It 
   
 ### Project 1: Develop a Simple Accessible Game using SceneryStack  
 
-**Project Size:** 175 hours  
+**Project Size:** 175 hours
 **Estimated Difficulty:** Intermediate  
 **Recommended Skills:**  
 
 - **JavaScript:** Proficient in JavaScript for implementing interactive features and how it interacts with the DOM.
 - **TypeScript:** Basic knowledge of TypeScript to work with existing codebases and enhance type safety.  
 - **Git/GitHub:** Skills to contribute code and communicate effectively within the development team.
-
+- (helpful) **Accessibility (a11y) Concepts:** Familiarity with ARIA roles, keyboard navigation, and screen reader compatibility.
 [Project Discussion Thread](<https://github.com/orgs/scenerystack/discussions> TODO: ADD SPECIFIC THREAD)  
 
 **Mentor:** Jonathan Olson
@@ -84,7 +93,7 @@ This project will serve as an **accessible alternative** and prove that web game
 
 ### How to Apply  
 
-Interested contributors should participate in the [Project Discussion Thread](https://github.com/orgs/scenerystack/discussions/) (TODO: ADD SPECIFIC THREAD) to express their interest, ask questions, and engage with mentors and the PhET community.
+Interested contributors should begin by participating in the [Project Discussion Thread](https://github.com/orgs/scenerystack/discussions/) (TODO: ADD SPECIFIC THREAD) to express their interest, ask questions, and engage with mentors and the SceneryStack/PhET community. Then proceed with the [instructions above for applying](#how-to-apply).
 
 ---
 
@@ -97,6 +106,7 @@ Interested contributors should participate in the [Project Discussion Thread](ht
 - JavaScript: Proficient in JavaScript for implementing interactive features.
 - TypeScript: Basic knowledge of TypeScript to work with existing codebases and enhance type safety.
 - Git/GitHub: Skills to contribute code and communicate
+- (helpful) **Accessibility (a11y) Concepts:** Familiarity with ARIA roles, keyboard navigation, and screen reader compatibility.
 [Project Discussion Thread](<https://github.com/orgs/scenerystack/discussions> TODO: ADD SPECIFIC THREAD)
 **Mentor:** Jesse Greenberg
 
@@ -126,59 +136,70 @@ Implementing an accessibility view for all SceneryStack projects is a crucial st
 
 #### How to Apply
 
-Interested contributors should participate in the [Project Discussion Thread](https://github.com/orgs/scenerystack/discussions/) (TODO: ADD SPECIFIC THREAD) to express their interest, ask questions, and engage with mentors and the PhET community.
+Interested contributors should begin by participating in the [Project Discussion Thread](https://github.com/orgs/scenerystack/discussions/) (TODO: ADD SPECIFIC THREAD) to express their interest, ask questions, and engage with mentors and the SceneryStack/PhET community. Then proceed with the [instructions above for applying](#how-to-apply).
 
 ---
 
-### Project 3: Implement Custom Text Size Preferences
+### Project 3: Optimizing Shape Operations in the Kite Library
 
-**Project Size:** 90 hours (small)
-**Estimated Difficulty:** Intermediate
+**Project Size:** 90-175 hours
+
+**Estimated Difficulty:** Beginner to Intermediate
+
 **Recommended Skills:**
 
-- JavaScript: Proficient in JavaScript for implementing interactive features.
-- TypeScript: Basic knowledge of TypeScript to work with existing codebases and enhance type safety.
-- Git/GitHub: Skills to contribute code and communicate
-  
-[PhET Custom Text Size Preferences Discussion](<https://github.com/orgs/scenerystack/discussions/TODO>: ADD SPECIFIC THREAD)
-**Mentor(s):** Samuel Reid, Jonathan Olson
+- **JavaScript:** Proficiency in JavaScript for implementing and optimizing algorithms.
+- **Computational Geometry:** Understanding of geometric algorithms and their computational complexities.
+- **Performance Profiling:** Experience with profiling tools to identify and resolve performance bottlenecks.
+- **Git/GitHub:** Familiarity with version control and collaborative development workflows.
+
+**Mentor:** Samuel Reid, Jonathan Olson
 
 #### Description
 
-SceneryStack seeks to enhance accessibility by allowing users to customize text sizes. This project involves developing controls to adjust text sizes dynamically. Key tasks include identifying all relevant text elements in the codebase, implementing size adjustments, ensuring dynamic layout integrity, and adding a global hotkey for font size changes. Collaboration with designers will be essential to iterate on UI/UX improvements.
+This project aims to enhance the performance and accuracy of SceneryStack's shape library, Kite, and its shape operations. Key areas of focus could include, depending on scope of the contributor's interests and expertise:
+
+1. **Optimizing Intersection Calculations:** Address inefficiencies in functions like `getLocalShape` to prevent excessive computations during shape intersections.
+2. **Refining Shape Union Operations:** Improve the `Shape.union` method to handle complex cases more efficiently and eliminate errors related to advanced disambiguation.
+3. **Reducing External Dependencies:** Evaluate and minimize reliance on external libraries, such as Paper.js, to decrease the overall size of simulations without compromising functionality.
+4. **Enhancing Robustness of Shape Functions:** Resolve issues in functions like `getStrokedShape` and `getOffsetShape` to ensure accurate rendering, especially in edge cases involving small or intricate shapes.
+
+<!-- Relevant Issues:
+<https://github.com/phetsims/kite/issues/105>
+<https://github.com/phetsims/kite/issues/101>
+<https://github.com/phetsims/kite/issues/98>
+<https://github.com/phetsims/kite/issues/97>
+<https://github.com/phetsims/kite/issues/91>
+<https://github.com/phetsims/kite/issues/83>
+<https://github.com/phetsims/kite/issues/82> -->
 
 #### Key Tasks
 
-Identify Text Elements: Write code that will locate relevant text elements in the codebase that require size adjustments.
-Implement Size Adjustment: Modify these elements to support dynamic text sizing.
-Identify Appropriate UI Control: Determine and integrate a suitable UI control for adjusting text sizes within Joist or other relevant components.
-Add Global Hotkeys: Implement global hotkeys (e.g., Ctrl+/Cmd+ to increase and Ctrl-/Cmd- to decrease font sizes) for quick text size adjustments.
-Ensure Dynamic Layout Integrity: Adjust layouts to accommodate varying text sizes, maintaining readability and visual appeal.
-Collaborate with Designers: Work with the design team to refine text sizing solutions.
-Testing and Validation: Ensure that text size adjustments do not disrupt simulation functionality or user experience.
+- **Performance Profiling:** Analyze current shape operations to identify and document performance bottlenecks.
+- **Algorithm Optimization:** Revise existing algorithms to enhance efficiency, particularly in intersection and union computations.
+- **Dependency Analysis:** Assess the necessity of external libraries and refactor code to reduce dependencies where possible.
+- **Robustness Improvements:** Test and refine shape functions to handle edge cases gracefully, ensuring accurate and artifact-free rendering.
 
-#### Expected Outcomes/Benefits/Deliverables
+#### Expected Outcomes/Deliverables
 
-Custom Text Size Control: A user-friendly control integrated into Joist or relevant components for adjusting text sizes.
-Global Hotkeys: Implemented shortcuts (Ctrl+/Cmd+ and Ctrl-/Cmd-) for increasing and decreasing font sizes.
-Enhanced Accessibility: Improved accessibility for users with visual impairments or those preferring larger text.
-Comprehensive Documentation: Documentation detailing the process for identifying and modifying text elements.
-Collaborative Workflow Experience: Experience working with designers on UI/UX improvements.
-Codebase Enhancements: Refactored code to support dynamic text sizing, enhancing PhET’s software flexibility.
+- **Enhanced Performance:** Significant reduction in computation times for shape operations, leading to smoother simulations.
+- **Improved Accuracy:** Elimination of rendering artifacts and errors in shape manipulations.
+- **Reduced Project Size:** Lowered dependency on external libraries, resulting in smaller file sizes for SceneryStack projects.
+- **Robust Test Suite:** A suite of test cases covering various scenarios to ensure the reliability of shape operations.
 
 #### Why This Project?
 
-Implementing custom text size preferences is a crucial step towards making PhET simulations more accessible and user-friendly. This project contributes to the inclusivity of educational tools and offers valuable experience in front-end development, UI/UX design collaboration, and accessibility standards implementation.
+Optimizing the Kite library's shape operations is essential for delivering high-performance, accurate, and efficient simulations. By addressing current limitations, this project will enhance the user experience and broaden the applicability of the SceneryStack framework.
 
 #### How to Apply
 
-Interested contributors should participate in the [Project Discussion Thread](https://github.com/orgs/scenerystack/discussions/) (TODO: ADD SPECIFIC THREAD) to express their interest, ask questions, and engage with mentors and the PhET community.
+Interested contributors should begin by participating in the [Project Discussion Thread](https://github.com/orgs/scenerystack/discussions/) (TODO: ADD SPECIFIC THREAD) to express their interest, ask questions, and engage with mentors and the SceneryStack/PhET community. Then proceed with the [instructions above for applying](#how-to-apply).
 
 ---
 
-### Project 4: Develop Missing Components for SceneryStack’s UI Library
+#### Project 4: Develop a Glass Panel + Dialog Layer for SceneryStack’s UI Library
 
-**Project Size:** 90-175 hours  
+**Project Size:** 90 hours  
 **Estimated Difficulty:** Intermediate  
 **Recommended Skills:**  
 
@@ -189,20 +210,20 @@ Interested contributors should participate in the [Project Discussion Thread](ht
 
 [Project Discussion Thread](https://github.com/orgs/scenerystack/discussions) <!--TODO: ADD SPECIFIC THREAD-->  
 
-**Mentor(s):** Samuel Reid
+**Mentor(s):** Sam Reid
 
 ---
 
 ### Description  
 
-**SceneryStack** is an open-source web development framework designed for creating interactive, accessible web interfaces. While it includes core UI elements—such as buttons, sliders, and basic layout components—several **common UI patterns** are still missing. Many popular frameworks (e.g., Material UI, Bootstrap, Angular Material) provide a broad range of components such as dialogs (both modal and non-modal) and advanced form elements.  
+**SceneryStack** is an open-source web development framework designed for creating interactive, accessible web interfaces. We would like to improve the core functionality of SceneryStack by introducing a glass pane layer to help with interaction. The glass pane layer will be used to intercept mouse and touch events when a modal dialog, combo box, or menu popup is shown. The glass pane should be automatically used, for instance, so that a ComboBox can be created without knowledge of its container. Likewise, a non-modal dialog should remain in front while allowing interaction with the rest of the page.
 
-This project invites contributors to **investigate popular UI frameworks** and **design/implement** new components for SceneryStack that align with **best practices** in accessibility, user experience, and coding standards. Example components that could be developed include:  
-
-- **Non-Modal Dialog:** Allows the user to interact with the rest of the page while the dialog is open.  
+- **Glass Pane** A layer that manages z-ordering and/or interaction for the page.
+- **Non-Modal Dialog:** Allows the user to interact with the rest of the page while the dialog is open.
+- **Modal Dialog** This dialog is dismissed when closed or when the user taps away from it.
 - **Enhanced ComboBox / DropDown with a Refined Glass Pane Layer:** Improves the layering system so components like combo boxes can be used anywhere in the scene tree.  
 
-By building these components to SceneryStack’s specifications—with a focus on **accessibility**—you will help grow the library’s functionality and empower developers to create more robust, inclusive interfaces.
+By adding these facets to SceneryStack—with a focus on **accessibility**—you will help grow the library’s functionality and empower developers to create more robust, inclusive interfaces.  We have initial prototype implementations in phetsims/joist that we would like to generalize and improve.
 
 Project scope depends on the complexity of the components chosen and the desired level of polish. Contributors are encouraged to discuss their ideas with the mentor and community to ensure alignment with SceneryStack’s goals.
 
@@ -211,11 +232,10 @@ Project scope depends on the complexity of the components chosen and the desired
 ### Key Tasks  
 
 1. **Research and Planning**  
-   - Investigate popular UI libraries (e.g., Material UI, Bootstrap, Angular Material) to understand typical UI patterns.  
-   - Identify the **top missing components** in SceneryStack.
+   - Investigate how glass panes, dialog systems, combo boxes and popups are implemented in other popular UI libraries.
 
 2. **Design and Prototyping**  
-   - Create initial design specifications for **common, reusable UI components**—such as non-modal dialogs, advanced combo boxes, tab panels, or others.  
+   - Create initial design specifications for the glass pane layer and how it will be used by modal dialogs, popups, menus, and combo boxes.
    - Collaborate with the mentor and community to ensure designs meet SceneryStack’s coding standards and accessibility guidelines.  
 
 3. **Implementation with Accessibility in Mind**: Implement components with SceneryStack's accessibility features, such as keyboard navigation and screen reader support.  
@@ -223,6 +243,7 @@ Project scope depends on the complexity of the components chosen and the desired
 4. **Integration and Refactoring**: Ensure new components integrate seamlessly into SceneryStack’s existing architecture.  
    - If needed, refactor relevant sections of the codebase (e.g., the glass pane layer) to improve maintainability and performance.
    - Create **developer-friendly documentation**, including code examples and usage guidelines.
+   - Adjust some or all PhET simulations that exercise this functionality to use the new strategy.
 
 5. **Testing and QA**  
    - Write **unit and integration tests** to verify component functionality and prevent regressions.
@@ -231,7 +252,7 @@ Project scope depends on the complexity of the components chosen and the desired
 
 ### Expected Outcomes/Benefits/Deliverables  
 
-- **New UI Components:** A set of **well-documented, accessible** components ready for immediate use in SceneryStack-based projects.  
+- **New Glass Pane Layer:** Implementation and usage of a glass pane layer that can be used for showing modal dialogs,
 - **Accessibility Enhancements:** Improved **assistive technology support** for common UI components (keyboard navigation, screen reader announcements, etc.).  
 - **Refined Codebase:** Potential refactoring of underlying infrastructure (e.g., glass pane layer) for easier maintenance and future component development.
 - **Community Growth:** Contributions will encourage **more developers** to adopt SceneryStack, seeing that it supports core UI features with robust accessibility.  
@@ -251,4 +272,4 @@ Despite the growing focus on **inclusive design**, many open-source libraries ei
 
 ### How to Apply  
 
-Interested contributors should participate in the [Project Discussion Thread](https://github.com/orgs/scenerystack/discussions/) (TODO: ADD SPECIFIC THREAD) to express their interest, ask questions, and engage with mentors and the PhET community.
+Interested contributors should begin by participating in the [Project Discussion Thread](https://github.com/orgs/scenerystack/discussions/) (TODO: ADD SPECIFIC THREAD) to express their interest, ask questions, and engage with mentors and the SceneryStack/PhET community. Then proceed with the [instructions above for applying](#how-to-apply).
