fix headers and links https://github.com/phetsims/special-ops/issues/275
still needs discussion thread links

--- a/docs/community/gsoc2025.md
+++ b/docs/community/gsoc2025.md
@@ -2,10 +2,10 @@
 
 This is a list of projects suggested by SceneryStack and PhET Interactive Simulations developers for [GSoC 2025](https://summerofcode.withgoogle.com/)
 
-- [Project 1: Develop an Accessible Game using SceneryStack](#project-1-develop-an-accessible-game-using-scenerystack)
+- [Project 1: Develop a Simple Accessible Game using SceneryStack](#project-1-develop-a-simple-accessible-game-using-scenerystack)
 - [Project 2: Implement Accessibility View for All SceneryStack Projects](#project-2-implement-accessibility-view-for-all-scenerystack-projects)
-- [Project 3: Implement Custom Text Size Preferences](#project-3-implement-custom-text-size-preferences)
-- [Project 4: Develop Missing Components for SceneryStack UI Library](#project-4-develop-missing-components-for-scenerystack-ui-library)
+- [Project 3: Optimizing Shape Operations in the Kite Library](#project-3-optimizing-shape-operations-in-the-kite-library)
+- [Project 4: Develop a Glass Panel + Dialog Layer for SceneryStack’s UI Library](#project-4-develop-a-glass-panel-dialog-layer-for-scenerystacks-ui-library)
 
 See below for more details on the projects listed above.
 
@@ -58,13 +58,13 @@ We look for:
 
 **Mentor:** Jonathan Olson
 
-### Description
+#### Description
 
 SceneryStack supports the creation of accessible, flexible web interactives by providing keyboard access, screen reader compatibility, and other accessibility features. While these features are well integrated into **PhET Interactive Simulations**, there is a lack of practical examples demonstrating their use in interactive games.  
 
 This project aims to develop a **fully accessible web-based game demo** using SceneryStack, showcasing **keyboard navigation, screen reader-compatible interactions, and customizable visual/audio features**. The game will serve as a **template and proof-of-concept** for making browser-based games more inclusive.  
 
-### Key Tasks
+#### Key Tasks
 
 - **Game Concept and Design:** Select a game genre (e.g., board game, puzzle, card game, turn-based strategy). We recommend a simple game, but with sufficient complexity to demonstrate accessibility features, such as Chess.
 
@@ -77,7 +77,7 @@ This project aims to develop a **fully accessible web-based game demo** using Sc
     - Implement **pan and zoom functionality** for adjustable views.  
   - **Collaborate with Designers:** Work with designers to create spoken descriptions that you will implement.
 
-### Expected Outcomes/Benefits/Deliverables
+#### Expected Outcomes/Benefits/Deliverables
 
 **Fully Functional Accessible Game** – A playable, if simple, web-based game with **comprehensive a11y support**, serving as a model for future projects.  
 
@@ -85,13 +85,13 @@ This project aims to develop a **fully accessible web-based game demo** using Sc
 
 **Improved Web Gaming Accessibility** – Addressing the current lack of **keyboard-accessible** and **screen reader-friendly** online games.
 
-### Why This Project?
+#### Why This Project?
 
 Many popular online games are **not keyboard or screen reader accessible**, making them unusable for many people with disabilities. For example, the most popular online Chess platforms do not offer keyboard navigation or screen reader support, or only offer the most mimimal support - not enough for a rich interactive experience.  
 
 This project will serve as an **accessible alternative** and prove that web games **can** be both **engaging and inclusive** from the start. Unlike most games that require users to **find and activate** accessibility settings, SceneryStack aims to provide **clear accessibility features from the moment the page loads**—removing barriers to entry for all players.  
 
-### How to Apply
+#### How to Apply
 
 Interested contributors should begin by participating in the [Project Discussion Thread](https://github.com/orgs/scenerystack/discussions/) (TODO: ADD SPECIFIC THREAD) to express their interest, ask questions, and engage with mentors and the SceneryStack/PhET community. Then proceed with the [instructions above for applying](#how-to-apply).
 
@@ -195,7 +195,7 @@ Interested contributors should begin by participating in the [Project Discussion
 
 ---
 
-#### Project 4: Develop a Glass Panel + Dialog Layer for SceneryStack’s UI Library
+### Project 4: Develop a Glass Panel + Dialog Layer for SceneryStack’s UI Library
 
 **Project Size:** 90 hours  
 **Estimated Difficulty:** Intermediate  
@@ -210,7 +210,7 @@ Interested contributors should begin by participating in the [Project Discussion
 
 **Mentor(s):** Sam Reid
 
-### Description
+#### Description
 
 **SceneryStack** is an open-source web development framework designed for creating interactive, accessible web interfaces. We would like to improve the core functionality of SceneryStack by introducing a glass pane layer to help with interaction. The glass pane layer will be used to intercept mouse and touch events when a modal dialog, combo box, or menu popup is shown. The glass pane should be automatically used, for instance, so that a ComboBox can be created without knowledge of its container. Likewise, a non-modal dialog should remain in front while allowing interaction with the rest of the page.
 
@@ -223,7 +223,7 @@ By adding these facets to SceneryStack—with a focus on **accessibility**—you
 
 Project scope depends on the complexity of the components chosen and the desired level of polish. Contributors are encouraged to discuss their ideas with the mentor and community to ensure alignment with SceneryStack’s goals.
 
-### Key Tasks
+#### Key Tasks
 
 1. **Research and Planning**  
    - Investigate how glass panes, dialog systems, combo boxes and popups are implemented in other popular UI libraries.
@@ -242,14 +242,14 @@ Project scope depends on the complexity of the components chosen and the desired
 5. **Testing and QA**  
    - Write **unit and integration tests** to verify component functionality and prevent regressions.
 
-### Expected Outcomes/Benefits/Deliverables
+#### Expected Outcomes/Benefits/Deliverables
 
 - **New Glass Pane Layer:** Implementation and usage of a glass pane layer that can be used for showing modal dialogs,
 - **Accessibility Enhancements:** Improved **assistive technology support** for common UI components (keyboard navigation, screen reader announcements, etc.).  
 - **Refined Codebase:** Potential refactoring of underlying infrastructure (e.g., glass pane layer) for easier maintenance and future component development.
 - **Community Growth:** Contributions will encourage **more developers** to adopt SceneryStack, seeing that it supports core UI features with robust accessibility.  
 
-### Why This Project?
+#### Why This Project?
 
 Despite the growing focus on **inclusive design**, many open-source libraries either lack **key UI components** or provide them with **inconsistent** accessibility features. Filling these gaps in SceneryStack will:  
 
@@ -258,6 +258,6 @@ Despite the growing focus on **inclusive design**, many open-source libraries ei
 - **Promote Inclusivity:** Expand the range of accessible user interfaces, benefitting both **developers** who want to build inclusive apps and **end-users** with diverse needs.  
 - **Showcase Good A11y Practices:** Demonstrate how to implement components “accessibility-first,” serving as a reference for other open-source projects.  
 
-### How to Apply
+#### How to Apply
 
 Interested contributors should begin by participating in the [Project Discussion Thread](https://github.com/orgs/scenerystack/discussions/) (TODO: ADD SPECIFIC THREAD) to express their interest, ask questions, and engage with mentors and the SceneryStack/PhET community. Then proceed with the [instructions above for applying](#how-to-apply).
