TOC fix, link updates https://github.com/phetsims/special-ops/issues/275

--- a/docs/community/gsoc2025.md
+++ b/docs/community/gsoc2025.md
@@ -5,7 +5,7 @@ This is a list of projects suggested by SceneryStack and PhET Interactive Simula
 - [Project 1: Develop a Simple Accessible Game using SceneryStack](#project-1-develop-a-simple-accessible-game-using-scenerystack)
 - [Project 2: Implement Accessibility View for All SceneryStack Projects](#project-2-implement-accessibility-view-for-all-scenerystack-projects)
 - [Project 3: Optimizing Shape Operations in the Kite Library](#project-3-optimizing-shape-operations-in-the-kite-library)
-- [Project 4: Develop a Glass Panel + Dialog Layer for SceneryStack’s UI Library](#project-4-develop-a-glass-panel-dialog-layer-for-scenerystacks-ui-library)
+- [Project 4: Develop a Glass Panel + Dialog Layer for SceneryStack’s UI Library](#project-4-develop-a-glass-panel--dialog-layer-for-scenerystacks-ui-library)
 
 See below for more details on the projects listed above.
 
@@ -93,7 +93,7 @@ This project will serve as an **accessible alternative** and prove that web game
 
 #### How to Apply
 
-Interested contributors should begin by participating in the [Project Discussion Thread](https://github.com/orgs/scenerystack/discussions/) (TODO: ADD SPECIFIC THREAD) to express their interest, ask questions, and engage with mentors and the SceneryStack/PhET community. Then proceed with the [instructions above for applying](#how-to-apply).
+Interested contributors should begin by participating in the [Project 1 Discussion Thread](https://github.com/orgs/scenerystack/discussions/categories/scenerystack) to express their interest, ask questions, and engage with mentors and the SceneryStack/PhET community. Then proceed with the [instructions above for applying](#how-to-apply).
 
 ---
 
@@ -134,7 +134,7 @@ Implementing an accessibility view for all SceneryStack projects is a crucial st
 
 #### How to Apply
 
-Interested contributors should begin by participating in the [Project Discussion Thread](https://github.com/orgs/scenerystack/discussions/) (TODO: ADD SPECIFIC THREAD) to express their interest, ask questions, and engage with mentors and the SceneryStack/PhET community. Then proceed with the [instructions above for applying](#how-to-apply).
+Interested contributors should begin by participating in the [Project 2 Discussion Thread](https://github.com/orgs/scenerystack/discussions/categories/scenerystack) to express their interest, ask questions, and engage with mentors and the SceneryStack/PhET community. Then proceed with the [instructions above for applying](#how-to-apply).
 
 ---
 
@@ -191,7 +191,7 @@ Optimizing the Kite library's shape operations is essential for delivering high-
 
 #### How to Apply
 
-Interested contributors should begin by participating in the [Project Discussion Thread](https://github.com/orgs/scenerystack/discussions/) (TODO: ADD SPECIFIC THREAD) to express their interest, ask questions, and engage with mentors and the SceneryStack/PhET community. Then proceed with the [instructions above for applying](#how-to-apply).
+Interested contributors should begin by participating in the [Project 3 Discussion Thread](https://github.com/orgs/scenerystack/discussions/categories/scenerystack) to express their interest, ask questions, and engage with mentors and the SceneryStack/PhET community. Then proceed with the [instructions above for applying](#how-to-apply).
 
 ---
 
@@ -260,4 +260,4 @@ Despite the growing focus on **inclusive design**, many open-source libraries ei
 
 #### How to Apply
 
-Interested contributors should begin by participating in the [Project Discussion Thread](https://github.com/orgs/scenerystack/discussions/) (TODO: ADD SPECIFIC THREAD) to express their interest, ask questions, and engage with mentors and the SceneryStack/PhET community. Then proceed with the [instructions above for applying](#how-to-apply).
+Interested contributors should begin by participating in the [Project 4 Discussion Thread](https://github.com/orgs/scenerystack/discussions/categories/scenerystack) to express their interest, ask questions, and engage with mentors and the SceneryStack/PhET community. Then proceed with the [instructions above for applying](#how-to-apply).
