fix project 4 title https://github.com/phetsims/special-ops/issues/275

--- a/docs/community/gsoc2025.md
+++ b/docs/community/gsoc2025.md
@@ -5,7 +5,7 @@ This is a list of projects suggested by SceneryStack and PhET Interactive Simula
 - [Project 1: Develop a Simple Accessible Game using SceneryStack](#project-1-develop-a-simple-accessible-game-using-scenerystack)
 - [Project 2: Implement Accessibility View for All SceneryStack Projects](#project-2-implement-accessibility-view-for-all-scenerystack-projects)
 - [Project 3: Optimizing Shape Operations in the Kite Library](#project-3-optimizing-shape-operations-in-the-kite-library)
-- [Project 4: Develop a Glass Panel + Dialog Layer for SceneryStack’s UI Library](#project-4-develop-a-glass-panel--dialog-layer-for-scenerystacks-ui-library)
+- [Project 4: Develop a Glass Panel and Dialog Layer for SceneryStack’s UI Library](#project-4-develop-a-glass-panel-and-dialog-layer-for-scenerystacks-ui-library)
 
 See below for more details on the projects listed above.
 
@@ -195,7 +195,7 @@ Interested contributors should begin by participating in the [Project 3 Discussi
 
 ---
 
-### Project 4: Develop a Glass Panel + Dialog Layer for SceneryStack’s UI Library
+### Project 4: Develop a Glass Panel and Dialog Layer for SceneryStack’s UI Library
 
 **Project Size:** 90 hours  
 **Estimated Difficulty:** Intermediate  
